--- a/index.html
+++ b/index.html
@@ -10,5 +10,21 @@
 </head>
 <body>
     <p>Malcolm in the Middle</p>
+
+    <!-- & Footer
+    ~ This is where important information will go that is not suitable for the <header> element
+        ~ Footnotes
+        ~ Links to extended sources
+            ~ In the <a> element -> use the following for the href attribute
+                ~ href = "/privacy"
+            ~ Also use the target attribute to open the link in a new web browser tab
+        ~ Copyright information
+    -->
+    <footer>
+        <!-- & &copy; -> is the symbol for copyright -->
+        <p>
+            &copy; 2025 EtariaL33. All rights reserved.
+        </p>
+    </footer>
 </body>
 </html>
